--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -17,7 +17,7 @@
 .main input {
   font-size: 16px;
   line-height: 24px;
-  color: #353740;
+  color: #191970	;
   font-family: "ColfaxAI", Helvetica, sans-serif;
 }
 .main {
@@ -27,13 +27,13 @@
   padding-top: 60px;
 }
 .main .icon {
-  width: 34px;
+  width: 0px;
 }
 .main h3 {
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
-  color: #202123;
+  color: #191970	;
   margin: 16px 0 40px;
 }
 .main form {
@@ -43,10 +43,10 @@
 }
 .main input[type="text"] {
   padding: 12px 16px;
-  border: 1px solid #10a37f;
+  border: 1px solid #4169E1;
   border-radius: 4px;
   margin-bottom: 24px;
-  outline-color: #10a37f;
+  outline-color: #4169E1;
 }
 .main ::placeholder {
   color: #8e8ea0;
@@ -55,12 +55,16 @@
 .main input[type="submit"] {
   padding: 12px 0;
   color: #fff;
-  background-color: #10a37f;
+  background-color: #4169E1;
   border: none;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
 }
+.main input[type="submit"]:hover {
+  background-color: #1E90FF;
+}
+
 .main .result {
   font-weight: bold;
   margin-top: 40px;
