--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -25,6 +25,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 60px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 .main .icon {
   width: 0px;
