--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -70,7 +70,8 @@
 .main .result {
   font-weight: normal;
   margin-top: 40px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 0px;
+  padding-right: 0px;
   overflow-wrap: break-word;
+  width: 90%;
 }
